--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Developers Resume of Alassane Yattara" />
+    <meta name="description" content="Blog for developer business entrepreneurship" />
     <meta name="author" content="Alassane Yattara" />
     <link rel="shortcut icon" href="favicon.ico" />
 
