Update public/index.html, to added tag <base href..>

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/" /> <!-- for local host -->
     <title>Alassane - Developer FullStack</title>
     <!-- Meta -->
     <meta charset="utf-8">
