--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <div id="root"></div>
 
     <!-- Bootstrap core JS-->
-    <script type="text/javascript" src="./assets/js/bootstrap.bundle.min.js"></script>
+    <!-- <script type="text/javascript" src="./assets/js/bootstrap.bundle.min.js"></script> -->
     <!-- Core theme JS-->
     <script src="./assets/js/scripts.js"></script>
 </body>
