Update index.html, to change site title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <base href="/" /> <!-- for local host -->
-    <title>Alassane - Developer FullStack</title>
+    <title>Blog and web service for Developer and Entrepreneurs</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
